<resources>
    <string name="app_name">StreamTeam</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_sign_in">Sign In</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="action_create_user">Register</string>
    <string name="create_user">Create User</string>
    <string name="facebook_app_id">1318388444853330</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_a_friend">Add a friend</string>
    <string name="search_friends">Search Friends</string>
    <string name="friends">Friends</string>
    <string name="add_friend">Add Friend</string>
    <string name="messages">Messages</string>
    <string name="send">Send</string>
    <string name="ignore">Ignore</string>
    <string name="frag_int_friend">friend</string>
    <string name="frag_int_friend_req">friend_request</string>
    <string name="frag_int_ignore">ignore</string>
    <string name="ignore_person">Ignore Person</string>
</resources>
